タイトルの修正

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="format-detection" content="telephone=no">
-<title>タイトル</title>
-<meta name="description" content="">
+<title>PHPの練習</title>
+<meta name="description" content="PHPの練習description">
 
 <meta property="og:type" content="">
-<meta property="og:title" content="">
+<meta property="og:title" content="PHPの練習OG?">
 <meta property="og:description" content="">
 <meta property="og:url" content="">
 <meta property="og:image" content="">
@@ -22,6 +22,7 @@
 </head>
 <body>
 <h1>Hello World!!</h1>
+hoge
 <script src="js/index.js"></script>
 </body>
 </html>
